<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Fragments.RegisterProfileFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:id="@+id/autocompleteView"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="106dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="104dp"
            android:hint="@string/search_major"
            android:theme="@style/Autocomplete"
            app:layout_constraintBottom_toBottomOf="@+id/ClassesTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MajorTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/YearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/graduating_year"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yearEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/registerSuccessfulText"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:text="@string/now_complete_your_profile_so_you_can_find_others_on_campus_to_study_with"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/MajorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:text="@string/major2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/autocompleteView"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/ClassesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="43dp"
            android:layout_marginLeft="16dp"
            android:text="@string/classes"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/YearTextView"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:hint="@string/my_classes"
            android:id="@+id/classesEdit"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintBaseline_toBaselineOf="@+id/ClassesTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:hint="@string/my_graduating_year"
            android:id="@+id/yearEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="67dp"
            app:layout_constraintBottom_toBottomOf="@+id/YearTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/YearTextView"
            android:inputType="" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="16dp"
            android:text="@string/name3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/nameEdit"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:hint="@string/name2"
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/autocompleteView"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>


</FrameLayout>