<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetingDetailFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_library_add_black_24dp"
        android:layout_margin="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/mtopicTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="33dp"
            android:text="@string/topic_goes_here_baby"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mCreatorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/mtopicTV"
            android:layout_marginTop="76dp"
            android:text="@string/creator_s_email_goes_here" />

        <TextView
            android:id="@+id/mDescriptionTV"
            android:layout_width="311dp"
            android:layout_height="92dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/mtopicTV"
            android:layout_marginTop="117dp"
            android:text="@string/big_long_description_goes_here" />

        <TextView
            android:id="@+id/mTimesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="190dp"
            android:layout_alignStart="@+id/mDescriptionTV"
            android:text="@string/meeting_time_here_from_one_to_another" />

        <TextView
            android:id="@+id/mDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/mTimesTV"
            android:layout_marginBottom="225dp"
            android:text="@string/meeting_date_goes_here"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="137dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/filesLV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mMeetingLocationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/mTimesTV"
            android:layout_marginBottom="262dp"
            android:text="@string/meeting_location_name_goes_here" />

    </RelativeLayout>

</FrameLayout>