<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MessagingDetailFragment">

    <LinearLayout
        android:id="@+id/outerProfileLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/welcome_to_messaging" />
        <TextView
            android:id="@+id/yourOwnEmail"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/targetRecipient"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address_here"
            />


            <Button
                android:id="@+id/sendMessageButton"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_conversation"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             android:id ="@+id/convoListView" />

    </LinearLayout>


</FrameLayout>